--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "NodeNext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "declaration": true,
-    "declarationMap": true,
-    "jsx": "react-jsx",
+    "declaration": false,
+    "declarationMap": false,
     "strict": true,
     "pretty": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -22,11 +21,13 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": true,
+    "allowJs": false,
+    "checkJs": false,
     "newLine": "lf",
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
-    "useDefineForClassFields": true
-  }
+    "useDefineForClassFields": true,
+    "outDir": "./out"
+  },
+  "include": ["./src/**/*"]
 }
