--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "eslint": "^8.56.0",
     "prettier": "^3.2.4",
     "typescript": "^5.3.3"
+  },
+  "scripts": {
+    "dev": "tsc -p tsconfig.json -w",
+    "build": "tsc -p tsconfig.json"
   }
 }
