modify ts compile output directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
     "useDefineForClassFields": true,
-    "outDir": "./dist"
+    "outDir": "./flymake-eslint"
   },
   "include": ["./src/**/*"]
 }
