--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
       - name: make output tarball
         uses: actions/upload-artifact@v4
         with:
-          path: dist/**/
+          path: flymake-eslint/**/*
           name: emacs-flymake-eslint
 
   deploy:
