--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "private": true,
   "description": "better eslint plugin for flymake in emacs",
   "devDependencies": {
-    "@eslint/js": "^8.57.0",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.26",
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
-  },
-  "scripts": {
-    "dev": "tsc -p tsconfig.json -w",
-    "build": "tsc -p tsconfig.json"
+    "@eslint/js": "^9.8.0",
+    "@types/eslint": "^9.6.0",
+    "eslint": "^9.8.0",
+    "prettier": "^3.3.3"
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
